# graphia

./: AUTHORS  CMakeLists.txt  README.md  TODO  configure.bat  configure.sh  licence.txt
cmake/: global-set.cmake
cmake/modules/: Findqt-solutions-qtpropertybrowser.cmake
examples/: simple_context_diagram.graphia
graphia/: CMakeLists.txt
graphia/core/: CMakeLists.txt  application.cpp  application.h  configuration.cpp  configuration.h  dialognewdiagram.cpp  dialognewdiagram.h  document.cpp  document.h  graphia.cpp  graphicsview.cpp  graphicsview.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow_p.cpp  mainwindow_p.h  version.cpp  version.h
graphia/diagrams/: CMakeLists.txt
graphia/diagrams/flow/: CMakeLists.txt
graphia/diagrams/flow/dialog/: CMakeLists.txt  dataflowmodel.cpp  dataflowmodel.h  dialog.h  dialogchoosedata.cpp  dialogchoosedata.h  dialogcreatedata.cpp  dialogcreatedata.h  dialoglistdiagram.cpp  dialoglistdiagram.h  dialoglisttypedico.cpp  dialoglisttypedico.h  dialogsetname.cpp  dialogsetname.h
graphia/diagrams/flow/graphics/: CMakeLists.txt  graphicsanchor.cpp  graphicsanchor.h  graphicsarrow.cpp  graphicsarrow.h  graphicscircle.cpp  graphicscircle.h  graphicsdoubleline.cpp  graphicsdoubleline.h  graphicsinput.cpp  graphicsinput.h  graphicsoutput.cpp  graphicsoutput.h  graphicsrect.cpp  graphicsrect.h  graphicsrectselection.cpp  graphicsrectselection.h  graphicsscene.cpp  graphicsscene.h  graphicstextitem.cpp  graphicstextitem.h  graphicstextitemprivate.cpp  graphicstextitemprivate.h  graphicswriter.cpp  graphicswriter.h
graphia/diagrams/flow/model/: CMakeLists.txt  basictypes.cpp  basictypes.h  class.cpp  class.h  data.cpp  data.h  datafactory.cpp  datafactory.h  flow.cpp  flow.h  flowfactory.cpp  flowfactory.h  input.cpp  input.h  inputfactory.cpp  inputfactory.h  item.cpp  item.h  itemcontainer.cpp  itemcontainer.h  itemfactory.cpp  itemfactory.h  output.cpp  output.h  outputfactory.cpp  outputfactory.h  processcontext.cpp  processcontext.h  processcontextfactory.cpp  processcontextfactory.h  processimplementation.cpp  processimplementation.h  processimplfactory.cpp  processimplfactory.h  processinstance.cpp  processinstance.h  processinstancefactory.cpp  processinstancefactory.h  store.cpp  (+9 more)
graphia/diagrams/flow/storage/: CMakeLists.txt  decodeflowcontext.cpp  decodeflowcontext.h  decodeflowdiagram.cpp  decodeflowdiagram.h  decodeflowmodel.cpp  decodeflowmodel.h  decodegraphics.cpp  decodegraphics.h  documentreader.cpp  documentreader.h  documentwriter.cpp  documentwriter.h
graphia/diagrams/generic/: CMakeLists.txt  graphicsconfiguration.cpp  graphicsconfiguration.h  graphicsitem.cpp  graphicsitem.h  toolitemmodel.cpp  toolitemmodel.h  xmlbasicitem.cpp  xmlbasicitem.h
graphia/include/: global.h  graphia.h
graphia/property/: CMakeLists.txt  propertybrowser.cpp  propertybrowser.h  propertydefinition.cpp  propertydefinition.h
graphia/resources/: resources.qrc
graphia/toolbox/: CMakeLists.txt  toolbox.cpp  toolbox.h  toolgroup.cpp  toolgroup.h  toolitem.cpp  toolitem.h
graphia/widgets/: CMakeLists.txt  buttongroup.cpp  buttongroup.h  toolbutton.cpp  toolbutton.h
installer/: install-debug.nsi  install-release.nsi
